# dataset-generator

./: .gitignore  README.md  generator.ipynb  generator.py  generator_ATBFL.ipynb  generator_ESC50.ipynb  generator_HSN.ipynb  notes.md  pyproject.toml  run.sh
HSN/: HSN_metadata_train.parquet
utils/: embeddings.py  helpers.py  segment_labels.py
